# Rust-Web-Development

./: .gitignore  Cargo.toml  README.md
ch_01/minimal-axum/: Cargo.toml
ch_01/minimal-axum/src/: main.rs
ch_01/minimal-reqwest/: Cargo.toml
ch_01/minimal-tcp/src/: main.rs
ch_01/minimal-warp/: Cargo.toml
ch_02/: Cargo.toml
ch_02/axum/: Cargo.toml
ch_02/axum/src/: main.rs
ch_03/: Cargo.toml
ch_03/axum/: Cargo.toml
ch_03/axum/src/: main.rs
ch_03/src/: main.rs
ch_04/axum/: Cargo.toml  questions.json
ch_04/axum/src/: main.rs
ch_04/ch_04-s4.1.2/: Cargo.toml
ch_04/ch_04-s4.1.2/src/: main.rs
ch_04/final/: Cargo.toml
ch_04/final/src/: main.rs
ch_05/: Cargo.toml
ch_05/axum/: Cargo.toml
ch_05/axum/handle-errors/: Cargo.toml
ch_05/axum/src/: main.rs  store.rs
ch_05/axum/src/routes/: answer.rs  question.rs
ch_05/axum/src/types/: answer.rs  pagination.rs  question.rs
ch_05/handle-errors/: Cargo.toml
ch_05/src/types/: answer.rs  question.rs
ch_06/: Cargo.toml
ch_06/axum/: Cargo.toml
ch_06/axum/handle-errors/: Cargo.toml
ch_06/axum/handle-errors/src/: lib.rs
ch_06/axum/src/: main.rs
ch_06/axum/src/routes/: answer.rs  question.rs
ch_06/handle-errors/: Cargo.toml
ch_07/: Cargo.toml
ch_07/axum/: Cargo.toml
ch_07/axum/handle-errors/: Cargo.toml
ch_07/axum/handle-errors/src/: lib.rs
ch_07/axum/src/: main.rs  store.rs
ch_07/axum/src/routes/: answer.rs  question.rs
ch_07/axum/src/types/: pagination.rs  question.rs
ch_07/handle-errors/: Cargo.toml
ch_07/handle-errors/src/: lib.rs
ch_07/migrations/: 20220509150516_questions_table.up.sql
ch_07/src/: store.rs
ch_07/src/types/: answer.rs
ch_08/: Cargo.toml
ch_08/axum/: Cargo.toml
ch_08/axum/handle-errors/: Cargo.toml
ch_08/axum/handle-errors/src/: lib.rs
ch_08/axum/src/: main.rs  store.rs
ch_08/axum/src/routes/: answer.rs  question.rs
ch_08/axum/src/types/: pagination.rs  question.rs
ch_08/handle-errors/: Cargo.toml
ch_08/handle-errors/src/: lib.rs
ch_08/src/: store.rs
ch_08/src/types/: pagination.rs  question.rs
ch_09/: Cargo.toml
ch_09/axum/: Cargo.toml
ch_09/axum/handle-errors/: Cargo.toml
ch_09/axum/handle-errors/src/: lib.rs
ch_09/axum/src/: main.rs  store.rs
ch_09/axum/src/routes/: authentication.rs
ch_09/axum/src/types/: account.rs  pagination.rs  question.rs
ch_09/handle-errors/: Cargo.toml
ch_09/migrations/: 20220514145724_answers_table.up.sql
ch_09/src/: profanity.rs  store.rs
ch_10/: Cargo.toml  build.rs
ch_10/handle-errors/: Cargo.toml
ch_10/src/: profanity.rs  store.rs
ch_10/src/types/: account.rs
ch_11/: Cargo.toml  build.rs
ch_11/axum/: Cargo.toml  build.rs
ch_11/axum/handle-errors/: Cargo.toml
ch_11/axum/handle-errors/src/: lib.rs
ch_11/axum/integration-tests/: Cargo.toml
ch_11/axum/migrations/: 20220523174842_create_accounts_table.up.sql
ch_11/axum/mock-server/: Cargo.toml
ch_11/axum/mock-server/src/: lib.rs
ch_11/axum/src/: config.rs  lib.rs  profanity.rs  store.rs
ch_11/axum/src/routes/: answer.rs  authentication.rs  question.rs
ch_11/axum/src/types/: pagination.rs
ch_11/handle-errors/: Cargo.toml
ch_11/handle-errors/src/: lib.rs
ch_11/integration-tests/src/: main.rs
ch_11/mock-server/src/: lib.rs
ch_11/src/: profanity.rs
ch_11/src/types/: account.rs
