[workspace]
members = [
    "ch_01/hello",
    "ch_01/minimal-axum",
    "ch_01/minimal-reqwest",
    "ch_01/minimal-tcp",
    "ch_01/minimal-warp",
    "ch_02",
    "ch_02/axum",
    "ch_03",
    "ch_03/axum",
    "ch_04/final",
    "ch_04/axum",
    "ch_05",
    "ch_05/axum",
    "ch_06",
#    "ch_06/axum",
    "ch_07",
#    "ch_07/axum",
    "ch_08",
#    "ch_08/axum",
    "ch_09",
#    "ch_09/axum",
    "ch_10",
#    "ch_10/axum",
    "ch_11",
    "ch_11/axum",
]
