[package]
name = "ch_06"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# We can omit the version number for local imports
handle-errors = { package = "handle-errors-06", path = "handle-errors" }
log = "0.4"
env_logger = "0.10"
log4rs = "1"
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
