[package]
name = "ch_08"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
handle-errors = { package = "handle-errors-08", path = "handle-errors" }
log = "0.4"
env_logger = "0.10"
log4rs = "1"
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
sqlx = { version = "0.7.0-alpha.2", features = ["runtime-tokio", "tls-rustls", "migrate", "postgres"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
