[package]
name = "ch_09"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
handle-errors = { package = "handle-errors-09", path = "handle-errors" }
log = "0.4"
env_logger = "0.10"
log4rs = "1"
uuid = { version = "1", features = ["serde", "v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
sqlx = { version = "0.7.0-alpha.2", features = ["runtime-tokio", "tls-rustls", "migrate", "postgres"] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
rand = "0.8"
rust-argon2 = "1"
paseto = "2"
chrono = "0.4"
