[package]
name = "ch_10"
version = "1.0.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
handle-errors = { path = "handle-errors", version = "0.1.0" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
rand = "0.8"
rust-argon2 = "1"
paseto = "2"
chrono = "0.4"
dotenv = "0.15"
clap = { version = "4", features = ["derive"] }
proc-macro2 = "1"
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
platforms = "2.0.0"
