[package]
name = "ch_11"
version = "1.0.0"
edition = "2021"

[dependencies]
handle-errors = { package = "handle-errors-11", path = "handle-errors" }
mock-server = { path = "mock-server", version = " 0.1.0" }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"
sqlx = { version = "0.7.0-alpha.2", features = ["runtime-tokio", "tls-rustls", "migrate", "postgres"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
rand = "0.8"
rust-argon2 = "1"
paseto = "2"
chrono = "0.4"
dotenv = "0.15"
clap = { version = "4", features = ["derive"] }
proc-macro2 = "1"

[build-dependencies]
platforms = "3"
