[package]
name = "ch_05-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
# We can omit the version number for local imports
handle-errors = { package = "handle-errors-05-axum", path = "handle-errors" }
