[package]
name = "ch_06-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
env_logger = "0.10"
http = "0.2"
handle-errors = { package = "handle-errors-06-axum", path = "handle-errors" }
log = "0.4"
log4rs = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
