[package]
name = "ch_09-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
chrono = "0.4"
env_logger = "0.10"
handle-errors = { package = "handle-errors-09-axum", path = "handle-errors" }
http = "0.2"
log = "0.4"
log4rs = "1"
paseto = "2"
rand = "0.8"
rust-argon2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.0-alpha.2", features = ["runtime-tokio", "tls-rustls", "migrate", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
uuid = { version = "1", features = ["v4"] }
