[package]
name = "ch_11-axum"
version = "1.0.0"
edition = "2021"

[dependencies]
handle-errors = { package = "handle-errors-11-axum", path = "handle-errors" }
mock-server = { package = "mock-server-11-axum", path = "mock-server" }

axum = "0.6"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
dotenv = "0.15"
paseto = "2"
proc-macro2 = "1"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
rust-argon2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.0-alpha.2", features = ["runtime-tokio", "tls-rustls", "migrate", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"

[build-dependencies]
platforms = "3"
