[package]
name = "handle-errors-11"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tracing = { version = "0.1", features = ["log"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
reqwest-middleware = "0.2"
sqlx = { version = "0.7.0-alpha.2", features = ["runtime-tokio", "tls-rustls", "migrate", "postgres"] }
rust-argon2 = "1"
